#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.50])
AC_INIT([gyazo-linux], [1.0], [tatofoo@gmail.com])
AC_CONFIG_SRCDIR([src/gyazo.c])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
